--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>AR Камера — Чарівне Пригодництво!</title>
+  <title>AR Камера!</title>
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <style>
@@ -156,9 +156,9 @@
 </head>
 <body>
 
-  <!-- Підказка: клікни, щоб увімкнути -->
+  <!-- Підказка: натисни, щоб увімкнути -->
   <div id="clickToStart">
-    Клацни, щоб<br>увімкнути чари! ✨<br>
+    Натисни, щоб<br>увімкнути! ✨<br>
     <span>👇</span>
   </div>
 
@@ -287,3 +287,4 @@
   </script>
 </body>
 </html>
+
