--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 arVideo.addEventListener('loadedmetadata', () => {
   const aspect = arVideo.videoWidth / arVideo.videoHeight; // Наприклад, 9/16
   const targetHeight = 2;
-  const targetWidth = targetHeight * aspect;
+   const stretchedWidth = targetHeight * aspect * 1.3; // ← 1.3 — коефіцієнт розширення (можна змінювати)
   arVideoEntity.setAttribute('geometry', 'width', targetWidth);
   arVideoEntity.setAttribute('geometry', 'height', targetHeight);
 });
@@ -280,5 +280,6 @@ arVideo.addEventListener('loadedmetadata', () => {
   </script>
 </body>
 </html>
+
 
 
